--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: HUGO_ENV=production hugo --minify
+        run: hugo --minify
         env:
           HUGO_ENV: production
 
