Modification de baseURL

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://stephane-deraco.github.io/
+baseURL: https://blog.deraco.fr/
 languageCode: fr-fr
 title: Blog de Stéphane
 theme: ananke
