--- a/config.yaml
+++ b/config.yaml
@@ -19,3 +19,5 @@ params:
   show_reading_time: true
   twitter: https://twitter.com/stephane_deraco
   github: https://github.com/stephane-deraco
+  featured_image: /images/elephants.jpg
+  background_color_class: bg-dark-gray
