--- a/config.yaml
+++ b/config.yaml
@@ -19,5 +19,6 @@ params:
   show_reading_time: true
   twitter: https://twitter.com/stephane_deraco
   github: https://github.com/stephane-deraco
+  linkedin: https://www.linkedin.com/in/st%C3%A9phane-deraco-964640194/
   featured_image: /images/elephants.jpg
   background_color_class: bg-dark-gray
