--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "public"]
 	path = public
 	url = https://github.com/stephane-deraco/stephane-deraco.github.io.git
+[submodule "themes/ananke"]
+	path = themes/ananke
+	url = https://github.com/stephane-deraco/gohugo-theme-ananke.git
