--- a/config.yaml
+++ b/config.yaml
@@ -22,3 +22,4 @@ params:
   linkedin: https://www.linkedin.com/in/st%C3%A9phane-deraco-964640194/
   featured_image: /images/elephants.jpg
   background_color_class: bg-dark-gray
+  rss: true
